fix graph margins, fix hdi label alignment

--- a/prototypes/graphs/src/HDILabels.scss
+++ b/prototypes/graphs/src/HDILabels.scss
@@ -5,6 +5,7 @@
   font-weight: 600;
   margin-top: 0.5em;
   align-items: center;
+  font-size: 0.875em;
   &.inline {
     display: inline-flex;
   }
